fixed wide logos on mobile

--- a/src/less/home.less
+++ b/src/less/home.less
@@ -430,10 +430,14 @@
 #sponsors {
     & .ru-partner {
         padding: 10px;
+    }
+
+    & .ru-partner-wide
+        width: auto;
 
         @media (max-width: 780px) {
             & {
-                width: 100%;
+                width: 100% !important;
             }
         }
     }
